src/objects/dupcheck__dc3ObjectMeta__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__isFieldMeta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field meta data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__isObjectMeta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Object meta data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__key__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__payload__c</fullName>
        <label>JSON Object Meta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>